--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          export
+          git show-ref
           git clone -b git_envs https://github.com/aiharos/github-actions.git
           cd github-actions/check-commit; go run check.go "../../."
